@@ -8,6 +8,14 @@ plugins {
     id "io.swagger.core.v3.swagger-gradle-plugin" version "2.2.22"
 }
 
+
+java {
+  toolchain {
+    languageVersion = JavaLanguageVersion.of(17)
+  }
+}
+
+
 repositories {
     // Use maven central for resolving dependencies.
     mavenCentral()
@@ -28,12 +36,12 @@ repositories {
 
 }
 
-
 dependencies {
 
 	implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-resource-server'
 	implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.boot:spring-boot-starter-tomcat'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-api:2.6.0'
 
     implementation 'org.glassfish.jersey.core:jersey-server:3.0.2' 
@@ -74,27 +82,8 @@ dependencies {
 }
 
 
-configurations {
-    // This ensures las2peer is available in the tests, but won't be bundled
-    testImplementation.extendsFrom compileOnly
-}
-
-jar {
-    manifest {
-        attributes(
-            'Main-Class': "${project.property('service.name')}.${project.property('service.class')}",
-            'Library-Version':  "${project.property('service.version')}",
-            'Library-SymbolicName': "${project.property('service.name')}"
-        )
-    }
-
-    from {
-        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
-    } {
-        exclude 'META-INF/*.RSA', 'META-INF/*.SF', 'META-INF/*.DSA'
-    }
-
-    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
+bootJar {
+    mainClassName = "${project.property('service.name')}.${project.property('service.class')}"
 }
 
 application {
@@ -109,123 +98,11 @@ application {
     targetCompatibility = "${project.property('java.version')}"
 }
 
-// put all .jar files into export/jars folder
-tasks.withType(Jar) {
-    destinationDirectory = file("$projectDir/export/jars")
+springBoot {
+    mainClassName = "${project.property('service.name')}.${project.property('service.class')}"
 }
 
-javadoc {
-    destinationDir = file("$projectDir/export/doc")
-}
 
-build.dependsOn "javadoc"
-
-compileJava {
-    dependsOn "copyMain"
-}
-
-compileTestJava {
-    dependsOn "copyTest"
-}
-
-// Copies .xml files into build directory
-task copyMain(type: Copy) {
-    from "src/main/java"
-    include "**/*.xml"
-    into "$buildDir/classes/java/main"
-}
-
-// Copies .xml files into build directory
-task copyTest(type: Copy) {
-    from "src/test/java"
-    include "**/*.xml"
-    into "$buildDir/classes/java/test"
-}
-
-// These two tasks restore the build and runtime environment used
-// in the ant environment
-task copyJar(type: Copy) {
-    from jar // here it automatically reads jar file produced from jar task
-    into "$rootDir/service"
-}
-
-task copyToLib(type: Copy) {
-    from configurations.compileClasspath
-    into "$rootDir/lib"
-}
-
-build.dependsOn copyJar
-build.dependsOn copyToLib
-
-// task startscripts {
-//     new File("$rootDir/bin", "start_network.sh").text = """#!/bin/bash
-
-// # this script is autogenerated by 'gradle startscripts'
-
-// java -cp "lib/*" --add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED OpenAIServiceApplication uploadStartupDirectory startService\\(\\'${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}\\'\\) startWebConnector interactive
-// """ 
-//     new File("$rootDir/bin", "start_network.bat").text = """:: this script is autogenerated by 'gradle startscripts'
-
-// %~d0
-// cd %~p0
-// cd ..
-// set BASE=%CD%
-// set CLASSPATH="%BASE%/lib/*;"
-// set ADD_OPENS=--add-opens java.base/java.lang=ALL-UNNAMED --add-opens java.base/java.util=ALL-UNNAMED
-
-// java -cp %CLASSPATH% %ADD_OPENS% OpenAIServiceApplication uploadStartupDirectory startService\\(\\'${project.property('service.name')}.${project.property('service.class')}@${project.property('service.version')}\\'\\) startWebConnector interactive
-
-// pause
-// """
-// }
-
-// build.dependsOn "startscripts"
-
-task deleteStartup {
-
-        file("$rootDir/etc/startup").deleteDir()
-    
-}
-
-build.dependsOn "deleteStartup"
-
-clean.doLast {
-    file("$rootDir/tmp").deleteDir()
-    file("$rootDir/lib").deleteDir()
-    file("$rootDir/servicebundle").deleteDir()
-    file("$rootDir/service").deleteDir()
-    file("$rootDir/etc/startup").deleteDir()
-    file("$projectDir/export").deleteDir()
-}
-
-task cleanAll {
-    dependsOn "clean"
-
-    doLast {
-        file("$rootDir/log").deleteDir()
-        file("$rootDir/node-storage").deleteDir()
-    }
-}
-
-test {
-    workingDir = file("$rootDir")
-}
-
-// configuration for eclipse (this allows to import the template project as a gradle project in eclipse without any problems)
-eclipse {
-    classpath {
-      file {
-            whenMerged {
-                // change output directory for test, main, resources and default
-                def main = entries.find { it.path == "src/main/java" }
-                main.output = "output/main"
-
-                def test = entries.find { it.path == "src/test/java" }
-                test.output = "output/test"
-
-                def defaultEntry = entries.find { it.kind == "output" && it.path == "bin/default" }
-                defaultEntry.path = "output/default"
-            }
-        }
-    }
+tasks.named('test') {
+  useJUnitPlatform()
 }
